<resources>
    <string name="title_activity_sobre">Sobre</string>
    <string name="app_name">Cadastro de Clientes</string>
    <string name="txtNomeCadastro">Nome:</string>
    <string name="TXTTelefoneCadastro">Telefone:</string>
    <string name="TXTEmailCadastro">E-mail:</string>
    <string name="txtDescricaoCadastro">Descrição:</string>
    <string name="txvID_model">n</string>
    <string name="txvNomeModel">Large Text</string>
    <string name="TXVTelefoneModel">Medium Text</string>
    <string name="txvEmailModel">Medium Text</string>
    <string name="txvDescricaoModel">Small Text</string>
    <string name="tvLIstarTitulo">Clientes</string>
    <string name="tvInserir_Titulo">Inserir Clientes</string>
    <string name="tvSobreTitulo">Cadastro de Clientes 18.0</string>
    <string name="tvSobreCopyRight">Copyrigh © Wagner Alves</string>
    <string name="tvSobreDireitos">Todos os Direitos Reservados</string>
    <string name="tvDoacoesTitulo">Obrigado!</string>
    <string name="tvEditarTitulo">Edição do Cliente</string>
    <string name="tvDoe">Clique para copiar o endereço</string>
    <string name="tvEditarNome">Nome</string>
    <string name="tvEditarEmail">E-mail</string>
    <string name="javaAlerta">Alerta</string>
    <string name="javaNomeTeste">O campo NOME deve ter pelo menos 4 dígitos.</string>
    <string name="javaTelefoneTeste">O campo TELEFONE deve possuir pelo menos 8 dígitos.</string>
    <string name="javaOK">OK</string>
    <string name="javaAtualizadoSucesso">" Atualizado com sucesso."</string>
    <string name="javaErro">Erro</string>
    <string name="javaFalhaAtualizar">Falha ao atualizar clientes</string>
    <string name="javaDesejaApagarCliente">Deseja apagar este cliente?</string>
    <string name="javaNao">Não</string>
    <string name="javaSim">Sim</string>
    <string name="javaClienteDeletadoSucesso">"Cliente deletado com sucesso! "</string>
    <string name="JavaFalhaDeletarClientes">Falha ao apagar clientes</string>
    <string name="javaVadastradoSucesso">" Cadastrado com sucesso."</string>
    <string name="javaFalhaCadastrar">Falha ao cadastrar clientes</string>
    <string name="javaDesejaApagarTodos">Deseja apagar Todos os clientes?</string>
    <string name="javaClientesDeletadosSucesso">"Clientes deletados com sucesso! "</string>
    <string name="javaFalhaApagarTodos">Falha ao apagar todos os clientes</string>
    <string name="javaDesejaRealizarBackup">Deseja Realizar o Backup dos Clientes?</string>
    <string name="javaBackupRealizadoSucesso">"Backup Realizado com Sucesso! "</string>
    <string name="javaFalhaRealizarBackup">"Falha ao efetuar backup, informe ao desenvolvedor: wagner.alves.it@gmail.com "</string>
    <string name="javaDesejaRestaurarBackup">Deseja Restaurar Todos os clientes?</string>
    <string name="javaRestoreSucesso">Restore efetuado com sucesso!</string>
    <string name="javaFalhaRestore">"Falha ao efetuar o restore, informe ao desenvolvedor: wagner.alves.it@gmail.com "</string>
    <string name="javaTituloCompartilhar">Baixe Gratuito o app Cadastro de Clientes</string>
    <string name="javaCompartilhar">Compartilhar</string>
    <string name="CPFHINT">CPF:</string>
    <string name="todo">TODO</string>
    <string name="obs">Observações</string>
    <string name="javaToqueSair">Sair</string>
    <string name="javaPressioneParaSair">Sair</string>
</resources>
